# cloudtrail_protection

./: .gitignore  README.md  app.py  pyproject.toml
cloudtrail_protection/: cloudtrail_protection_stack.py
lambda/: cloudtrail_reactivator.py
