[tool.poetry]
name = "cloudtrail_protection"
version = "0.1.0"
description = "Deploys a CloudTrail that is monitored by a CloudWatch Event Rule and gets re-enabled by a Lambda in case it gets disabled by an user."
authors = ["your_name <your_name@mail.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
aws-cdk-aws-iam = "^1.22.0"
aws-cdk-aws-sns = "^1.22.0"
aws-cdk-aws-sns-subscriptions = "^1.22.0"
aws-cdk-core = "^1.22.0"
aws-cdk-aws-events-targets = "^1.22.0"
aws-cdk-aws-cloudtrail = "^1.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
